[gd_scene load_steps=9 format=3 uid="uid://c7w4mfwiuasxy"]

[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Event_Manager.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bl1nyj51u0sv" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Background.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://chrrvye6ijyav" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/VersionLabel.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Navigation_Button.tscn" id="4_aggtm"]
[ext_resource type="PackedScene" uid="uid://7aknajkgeawg" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/NewFieldPopup.tscn" id="6_wbf0v"]
[ext_resource type="PackedScene" uid="uid://c1klfol683pf1" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="7_t8ows"]
[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="8"]

[node name="Event_Manager" type="Control" groups=["Database", "Tab"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8")
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("3")]
visible = false
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="VBox1" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
layout_mode = 2

[node name="Refresh_Events" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Reset Events"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Center1" type="CenterContainer" parent="VBox1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Center1"]
visible = false
layout_mode = 2
text = "CHANGES HAVE BEEN MADE BUT NOT SAVED"

[node name="SaveChanges" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Save Page"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Label" type="Label" parent="VBox1/HBox1"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBox1/HBox1"]
visible = false
layout_mode = 2

[node name="AddNewItem" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Add Event"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Label3" type="Label" parent="VBox1/HBox1"]
layout_mode = 2

[node name="DeleteSelectedItem" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Delete"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="VBox1/HBox1" groups=["Table Action"] instance=ExtResource("4_aggtm")]
visible = false
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Cancel"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Label4" type="Label" parent="VBox1/HBox1"]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
follow_focus = true

[node name="Table_Buttons" type="VBoxContainer" parent="VBox1/HBox2/Scroll1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll2" type="HBoxContainer" parent="VBox1/HBox2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel1" type="PanelContainer" parent="VBox1/HBox2/Scroll2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBox1/HBox2/Scroll2/Panel1"]
layout_mode = 2
color = Color(0, 0, 0, 0.0823529)

[node name="Hbox3" type="HBoxContainer" parent="VBox1"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VersionLabel" parent="VBox1/Hbox3" instance=ExtResource("4")]
layout_mode = 2

[node name="Popups" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.894118)

[node name="popup_delete_confirm" type="Control" parent="Popups"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -45.5
offset_right = 254.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer" instance=ExtResource("7_t8ows")]
layout_mode = 2

[node name="Label_Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/Label/HBox1" index="0"]
custom_minimum_size = Vector2(150, 125)
button_text = "Are you sure you want to delete Event %?"

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete Event %?"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Accept" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
size_flags_horizontal = 3
button_text = "Accept"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("4_aggtm")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
size_flags_horizontal = 3
button_text = "Cancel"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="popup_newValue" parent="Popups" instance=ExtResource("6_wbf0v")]
visible = false
layout_mode = 1

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/ItemType_Selection" index="1"]
item_count = 16
popup/item_15/text = "Dialog Options"
popup/item_15/id = 15

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
item_count = 41
popup/item_40/text = "Event Dialog Variables"
popup/item_40/id = 40

[node name="popup_deleteKey" parent="Popups" instance=ExtResource("7")]
visible = false
layout_mode = 1

[node name="ListInput" type="Control" parent="Popups"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileSelect" type="Control" parent="Popups"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Float" type="Node" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="VBox1/HBox1/Refresh_Events" to="." method="_on_RefreshData_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveChanges" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/HBox1/AddNewItem" to="." method="_on_AddNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/DeleteSelectedItem" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/Cancel" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_deletePopup_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on__deletePopup_Cancel_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Accept" to="." method="_on_NewField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_NewField_Cancel_button_up"]
[connection signal="item_selected" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" to="." method="_on_Itemlist_item_selected"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_DeleteField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_DeleteField_Cancel_button_up"]

[editable path="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/Label"]
[editable path="Popups/popup_newValue"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Input_Text"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Input_Text/Input_Node/Label"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Input_Text/Input_Node/AdvancedControlsVBox/Label"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Input_Text/Input_Node/AdvancedControlsVBox/Display_Child/Label"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Input_Text/input_templateBuffer"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/ItemType_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/ItemType_Selection/Label"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection/Label"]
[editable path="Popups/popup_deleteKey"]
[editable path="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Label2"]
